# surfaces

./: .gitignore  CMakeLists.txt  main.cpp  raft.frag  raft.vert  screen.frag  screen.vert  sun.frag  water.frag  water.vert
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: debug_point.frag  screen_bloom_blur.frag  screen_bloom_extract.frag  standard.vert  water.vert
src/: camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  debug.cpp  debug.hpp  inter.cpp  inter.hpp  interframebuffer.cpp  interframebuffer.hpp  lg.cpp  lg.hpp  main.cpp  math.cpp  math.hpp  models.cpp  models.hpp  physics.cpp  physics.hpp  raft.cpp  raft.hpp  screenbuffer.cpp  screenbuffer.hpp  sun.cpp  sun.hpp  time.cpp  time.hpp  water.cpp  water.hpp  wave.cpp  wave.hpp  xgl.cpp  xgl.hpp
